--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 numpy = "^2.2.4"
 matplotlib = "^3.10.1"
+scipy = "^1.15.2"
 
 
 [tool.poetry.group.dev.dependencies]
