removing testing file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 numpy = "^2.2.4"
 matplotlib = "^3.10.1"
 scipy = "^1.15.2"
+scipy-stubs = "^1.15.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
