--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ numpy = "^2.2.4"
 matplotlib = "^3.10.1"
 scipy = "^1.15.2"
 scipy-stubs = "^1.15.2.1"
+tqdm = "^4.67.1"
 
 
 [tool.poetry.group.dev.dependencies]
