--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ matplotlib = "^3.10.1"
 scipy = "^1.15.2"
 scipy-stubs = "^1.15.2.1"
 tqdm = "^4.67.1"
+types-tqdm = "^4.67.0.20250404"
 
 
 [tool.poetry.group.dev.dependencies]
